[gd_scene load_steps=32 format=2]

[ext_resource path="res://art/city.png" type="Texture" id=1]
[ext_resource path="res://scripts/City.gd" type="Script" id=2]
[ext_resource path="res://art/explode/explode 01.png" type="Texture" id=3]
[ext_resource path="res://art/explode/explode 08.png" type="Texture" id=4]
[ext_resource path="res://art/explode/explode 03.png" type="Texture" id=5]
[ext_resource path="res://art/explode/explode 04.png" type="Texture" id=6]
[ext_resource path="res://art/explode/explode 06.png" type="Texture" id=7]
[ext_resource path="res://art/explode/explode 07.png" type="Texture" id=8]
[ext_resource path="res://art/explode/explode 09.png" type="Texture" id=9]
[ext_resource path="res://art/explode/explode 10.png" type="Texture" id=10]
[ext_resource path="res://art/explode/explode 02.png" type="Texture" id=11]
[ext_resource path="res://art/explode/explode 05.png" type="Texture" id=12]
[ext_resource path="res://art/explode/explode 11.png" type="Texture" id=13]
[ext_resource path="res://art/explode/explode 12.png" type="Texture" id=14]
[ext_resource path="res://art/explode/explode 00.png" type="Texture" id=15]
[ext_resource path="res://art/explode/explode 13.png" type="Texture" id=16]
[ext_resource path="res://art/explode/explode 24.png" type="Texture" id=17]
[ext_resource path="res://art/explode/explode 22.png" type="Texture" id=18]
[ext_resource path="res://art/explode/explode 23.png" type="Texture" id=19]
[ext_resource path="res://art/explode/explode 21.png" type="Texture" id=20]
[ext_resource path="res://art/explode/explode 18.png" type="Texture" id=21]
[ext_resource path="res://art/explode/explode 19.png" type="Texture" id=22]
[ext_resource path="res://art/explode/explode 17.png" type="Texture" id=23]
[ext_resource path="res://art/explode/explode 20.png" type="Texture" id=24]
[ext_resource path="res://art/explode/explode 15.png" type="Texture" id=25]
[ext_resource path="res://art/explode/explode 14.png" type="Texture" id=26]
[ext_resource path="res://art/explode/explode 16.png" type="Texture" id=27]
[ext_resource path="res://art/city_destroyed.png" type="Texture" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 471, 221 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "destroyed",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": true,
"name": "explosion",
"speed": 5.0
} ]

[node name="City1" type="StaticBody2D"]
collision_layer = 256
collision_mask = 2
script = ExtResource( 2 )

[node name="City1Collision" type="CollisionShape2D" parent="."]
position = Vector2( -1, 19 )
shape = SubResource( 1 )

[node name="City1Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="City1Explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 6.99999, -129 )
scale = Vector2( 4.2775, 3.70829 )
frames = SubResource( 3 )
animation = "explosion"

[connection signal="animation_finished" from="City1Explosion" to="." method="_on_City1Explosion_animation_finished"]
